--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
 	--color-main: #7540bf;
-	--color-accent: rgb(255, 162, 58);
+	--color-accent: #ffa23a;
 
 	/* z-index */
 	--z-overlay: 99;
