--- a/src/styles/_pico.custom.css
+++ b/src/styles/_pico.custom.css
@@ -8,7 +8,8 @@
 	--pico-primary-underline: rgba(131, 82, 197, 0.5);
 	--pico-primary-hover: #6935b3;
 	--pico-primary-hover-background: #6935b3;
-	--pico-primary-focus: rgba(167, 128, 212, 0.25);
+	--pico-primary-focus: var(--color-accent);
+	--pico-contrast-focus: var(--color-accent);
 	--pico-primary-inverse: #f8f8f8;
 
 	--pico-secondary: #5d6b89;
@@ -37,7 +38,8 @@
 		--pico-primary-underline: rgba(178, 144, 217, 0.5);
 		--pico-primary-hover: #c9afe4;
 		--pico-primary-hover-background: #8352c5;
-		--pico-primary-focus: rgba(178, 144, 217, 0.25);
+		--pico-primary-focus: var(--color-accent);
+		--pico-contrast-focus: var(--color-accent);
 		--pico-primary-inverse: #f8f8f8;
 
 		--pico-inv-color: #b49ad9;
