--- a/src/app.css
+++ b/src/app.css
@@ -2,4 +2,5 @@
 @import "styles/_pico.custom.css";
 @import "styles/reset.css";
 @import "styles/global.css";
+@import "styles/fonts.css";
 @import "styles/variables.css";
