feat: add InvoiceForm COMPONENT

--- a/src/styles/_pico.custom.css
+++ b/src/styles/_pico.custom.css
@@ -8,7 +8,7 @@
 	--pico-primary-background: #7540bf;
 	--pico-primary-underline: rgba(131, 82, 197, 0.5);
 	--pico-primary-hover: #6331a8;
-	--pico-primary-hover-background: #7540bf;
+	--pico-primary-hover-background: #5e3399;
 	--pico-primary-focus: var(--color-accent);
 	--pico-contrast-focus: var(--color-accent);
 	--pico-primary-inverse: #f8f8f8;
