--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,48 @@ svg {
 	fill: currentColor;
 }
 
+label {
+	display: block;
+	font-weight: bold;
+}
+
+label span {
+	font-weight: normal;
+	color: var(--pico-secondary);
+}
+
+input[type='text']:not(.search),
+input[type='number'],
+input[type='date'],
+input[type='password'],
+input[type='email'],
+select,
+textarea {
+	width: 100%;
+	height: 2.5rem;
+	margin-bottom: 0;
+	padding: 0 1rem;
+}
+
+input:focus,
+select:focus,
+textarea:focus {
+	border-color: transparent;
+	box-shadow: 0 0 0 0.1875rem var(--color-accent);
+}
+
+textarea {
+	height: 8rem;
+}
+
+select {
+	appearance: none;
+}
+
+.field {
+	margin-bottom: 1.6rem;
+}
+
 /* for hiding content (screen reader only) */
 .visually-hidden {
 	position: absolute;
