--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,8 +1,8 @@
 :root {
-	--color-primary: #8352c5;
+	--color-primary: #7a3acf;
 	--color-primary-disabled: #EFEAF1;
 	--color-black: #373c44;
-	--color-accent: #FFA23A;
+	--color-accent: #ffab4b;
 	--color-success: #158667;
 	--color-success-bg: #22c697;
 	--color-error: #D53E51;
