--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,15 +61,20 @@ select {
 	column-gap: 1rem;
 }
 
-.auth .field {
-	min-width: 19rem;
-}
-
-.auth .field label {
+.auth__title {
+	margin-bottom: 2rem;
 	color: var(--color-accent);
 }
 
-.auth .field a {
+.auth__form .field {
+	min-width: 19rem;
+}
+
+.auth__form .field label {
+	color: var(--color-accent);
+}
+
+.auth__form .field a {
 	align-self: baseline;
 	display: inline-block;
 	padding: 0.1rem;
@@ -80,16 +85,16 @@ select {
 	border-radius: 0.2rem;
 }
 
-.auth .field a:hover {
+.auth__form .field a:hover {
 	text-decoration: none;
 }
 
-.auth .field a:focus-visible {
+.auth__form .field a:focus-visible {
 	color: var(--color-accent);
 	text-decoration: none;
 }
 
-.auth .field p {
+.auth__form .field p {
 	text-align: center;
 }
 
@@ -100,6 +105,10 @@ select {
 	font-weight: bold;
 	color: var(--color-black);
 	background-color: var(--color-success-bg);
+}
+
+.auth__btn--reset {
+	margin-top: 0;
 }
 
 @media (width < 1024px)  {
