refactor: change variables for background-color

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,5 +1,6 @@
 :root {
 	--color-primary: #7a3acf;
+	--color-primary-bg: #f4f4f4;
 	--color-primary-disabled: #EFEAF1;
 	--color-black: #373c44;
 	--color-accent: #ffab4b;
